daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: http-echo-daemonset
  labels:
    app: http-echo-daemon
spec:
  selector:
    matchLabels:
      app: http-echo-daemon
  template:
    metadata:
      labels:
        app: http-echo-daemon
    spec:
      containers:
      - name: http-echo
        image: nginx:alpine
        ports:
        - containerPort: 80
