echo.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
spec:
  selector:
    app: http-echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deployment
  labels:
    app: http-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /test-volume
          name: test-volume
      - name: sidecard-sample
        image: consul:latest
        volumeMounts:
        - mountPath: /test-volume
          name: test-volume
      volumes:
      - name: test-volume
        emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deployment-canary
  labels:
    app: http-echo
    tier: canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /test-volume
          name: test-volume
      - name: sidecard-sample
        image: consul:latest
        volumeMounts:
        - mountPath: /test-volume
          name: test-volume
      volumes:
      - name: test-volume
        emptyDir: {}
